Switch project order, fixed some mobile issues

--- a/grove.html
+++ b/grove.html
@@ -339,37 +339,6 @@
           <div class="row g-4 pb-3">
 
             <!--Project Link Start-->
-            <a href="#" class="col-12 col-sm-4">
-
-              <div class="overlay-container">
-
-                <img src="Images/homePage/website_2022_homePage_thumbnailsLoop.png"
-                  alt="The Loop logo over an off-white background." class="overlay-image">
-
-                <div class="overlay">
-
-                  <div class="overlay-text">
-
-                    <p class="overlay-text-primary"> Loop </p>
-
-                    <hr class="overlay-divider mx-auto my-4">
-
-                    <p class="overlay-text-secondary"> Coming Soon! </p>
-
-                  </div>
-
-
-                </div>
-
-
-              </div>
-
-
-            </a>
-            <!--Project Link End-->
-
-
-            <!--Project Link Start-->
             <a href="lacroix.html" class="col-12 col-sm-4">
 
               <div class="overlay-container">
@@ -432,6 +401,39 @@
             <!--Project Link End-->
 
 
+            <!--Project Link Start-->
+            <a href="calpolyracing.html" class="col-12 col-sm-4">
+
+              <div class="overlay-container">
+
+                <img
+                  src="Images/homePage/website_2022_homePage_thumbnailsCalPolyRacing.png"
+                  alt="The Cal Poly Racing logo over a gray background."
+                  class="overlay-image">
+
+                <div class="overlay">
+
+                  <div class="overlay-text">
+
+                    <p class="overlay-text-primary"> Cal Poly Racing </p>
+
+                    <hr class="overlay-divider mx-auto my-4">
+
+                    <p class="overlay-text-secondary"> Creative Direction </p>
+
+                  </div>
+
+
+                </div>
+
+
+              </div>
+
+
+            </a>
+            <!--Project Link End-->
+
+
           </div>
 
 
@@ -456,7 +458,7 @@
               Let's build something cool together!
             </p>
 
-            <div class="pt-3 pb-5 mb-5">
+            <div class="pt-3 pb-5">
 
               <a href="mailto:srogersdesign27@gmail.com"
                 class="button border my-3 px-4 py-2">Email
