--- a/index.html
+++ b/index.html
@@ -109,37 +109,6 @@
 
 
       <!--Project Link Start-->
-      <a href="#" class="col-12 col-sm-6 col-md-4">
-
-        <div class="overlay-container">
-
-          <img src="Images/homePage/website_2022_homePage_thumbnailsLoop.png"
-            alt="The Loop logo over an off-white background." class="overlay-image">
-
-          <div class="overlay">
-
-            <div class="overlay-text">
-
-              <p class="overlay-text-primary"> Loop </p>
-
-              <hr class="overlay-divider mx-auto my-4">
-
-              <p class="overlay-text-secondary"> Coming Soon! </p>
-
-            </div>
-
-
-          </div>
-
-
-        </div>
-
-
-      </a>
-      <!--Project Link End-->
-
-
-      <!--Project Link Start-->
       <a href="lacroix.html" class="col-12 col-sm-6 col-md-4">
 
         <div class="overlay-container">
@@ -234,6 +203,37 @@
 
 
       <!--Project Link Start-->
+      <a href="loop.html" class="col-12 col-sm-6 col-md-4">
+
+        <div class="overlay-container">
+
+          <img src="Images/homePage/website_2022_homePage_thumbnailsLoop.png"
+            alt="The Loop logo over an off-white background." class="overlay-image">
+
+          <div class="overlay">
+
+            <div class="overlay-text">
+
+              <p class="overlay-text-primary"> Loop </p>
+
+              <hr class="overlay-divider mx-auto my-4">
+
+              <p class="overlay-text-secondary"> Concept App </p>
+
+            </div>
+
+
+          </div>
+
+
+        </div>
+
+
+      </a>
+      <!--Project Link End-->
+
+
+      <!--Project Link Start-->
       <a href="xvela.html" class="col-12 col-sm-6 col-md-4">
 
         <div class="overlay-container">
@@ -265,7 +265,7 @@
 
 
       <!--Project Link Start-->
-      <a href="#" class="col-12 col-sm-6 col-md-4">
+      <a href="36minutesoftype.html" class="col-12 col-sm-6 col-md-4">
 
         <div class="overlay-container">
 
@@ -281,7 +281,7 @@
 
               <hr class="overlay-divider mx-auto my-4">
 
-              <p class="overlay-text-secondary"> Coming Soon! </p>
+              <p class="overlay-text-secondary"> Lettering </p>
 
             </div>
 
@@ -317,7 +317,7 @@
           Let's build something cool together!
         </p>
 
-        <div class="pt-3 pb-5 mb-5">
+        <div class="pt-3 pb-5">
 
           <a href="mailto:srogersdesign27@gmail.com"
             class="button border my-3 px-4 py-2">Email
@@ -331,19 +331,6 @@
 
     </div>
     <!--CTA Section End-->
-
-
-    <!--Folio Start
-    <div style="position: absolute; bottom: 0; background: Black">
-
-      <p class=" folio text-center pt-3">© 2022 Copyright Sam Rogers | This website does
-        not
-        collect
-        your information.
-      </p>
-
-    </div>
-    Folio End-->
 
 
   </div>
