--- a/lacroix.html
+++ b/lacroix.html
@@ -405,22 +405,22 @@
 
 
         <!--Project Link Start-->
-        <a href="xvela.html" class="col-12 col-sm-4">
+        <a href="loop.html" class="col-12 col-sm-4">
 
           <div class="overlay-container">
 
-            <img src="Images/homePage/website_2022_homePage_thumbnailsXVELA.png"
-              alt="The XVELA logo over a blue background." class="overlay-image">
+            <img src="Images/homePage/website_2022_homePage_thumbnailsLoop.png"
+              alt="The Loop logo over an off-white background." class="overlay-image">
 
             <div class="overlay">
 
               <div class="overlay-text">
 
-                <p class="overlay-text-primary"> XVELA </p>
+                <p class="overlay-text-primary"> Loop </p>
 
                 <hr class="overlay-divider mx-auto my-4">
 
-                <p class="overlay-text-secondary"> Icon Library </p>
+                <p class="overlay-text-secondary"> Concept App </p>
 
               </div>
 
@@ -459,7 +459,7 @@
           Let's build something cool together!
         </p>
 
-        <div class="pt-3 pb-5 mb-5">
+        <div class="pt-3 pb-5">
 
           <a href="mailto:srogersdesign27@gmail.com"
             class="button border my-3 px-4 py-2">Email
