--- a/loop.html
+++ b/loop.html
@@ -322,7 +322,7 @@
     <!--2 Col Content Section Start-->
     <div class="row pt-4 pb-5 align-items-center">
 
-      <div class="col-12 col-sm-6 ps-5 pe-5 pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 ps-5 pe-5 pt-5 pt-sm-0 order-2 order-sm-1">
 
         <p class="body-3">Education helps people make informed decisions in the future.
         </p>
@@ -330,7 +330,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6">
+      <div class="col-12 col-sm-6 order-1 order-sm-2">
 
         <img src="Images/loop/website_2022_loop_cardsLearn.png"
           alt="A detail view of the same task card with a description explaining why skipping TV matters."
@@ -498,7 +498,7 @@
           Let's build something cool together!
         </p>
 
-        <div class="pt-3 pb-5 mb-5">
+        <div class="pt-3 pb-5">
 
           <a href="mailto:srogersdesign27@gmail.com"
             class="button border my-3 px-4 py-2">Email
