--- a/xvela.html
+++ b/xvela.html
@@ -329,7 +329,7 @@
       <div class="row g-4 pb-3">
 
         <!--Project Link Start-->
-        <a href="#" class="col-12 col-sm-4">
+        <a href="36minutesoftype.html" class="col-12 col-sm-4">
 
           <div class="overlay-container">
 
@@ -345,7 +345,7 @@
 
                 <hr class="overlay-divider mx-auto my-4">
 
-                <p class="overlay-text-secondary"> Coming Soon! </p>
+                <p class="overlay-text-secondary"> Lettering </p>
 
               </div>
 
@@ -392,22 +392,23 @@
 
 
         <!--Project Link Start-->
-        <a href="#" class="col-12 col-sm-4">
+        <a href="lacroix.html" class="col-12 col-sm-4">
 
           <div class="overlay-container">
 
-            <img src="Images/homePage/website_2022_homePage_thumbnailsLoop.png"
-              alt="The Loop logo over an off-white background." class="overlay-image">
+            <img src="Images/homePage/website_2022_homePage_thumbnailsLaCroix.png"
+              alt="The rebranded LaCroix logo over a light blue background."
+              class="overlay-image">
 
             <div class="overlay">
 
               <div class="overlay-text">
 
-                <p class="overlay-text-primary"> Loop </p>
+                <p class="overlay-text-primary"> LaCroix </p>
 
                 <hr class="overlay-divider mx-auto my-4">
 
-                <p class="overlay-text-secondary"> Coming Soon! </p>
+                <p class="overlay-text-secondary"> Branding </p>
 
               </div>
 
@@ -446,7 +447,7 @@
           Let's build something cool together!
         </p>
 
-        <div class="pt-3 pb-5 mb-5">
+        <div class="pt-3 pb-5">
 
           <a href="mailto:srogersdesign27@gmail.com"
             class="button border my-3 px-4 py-2">Email
