--- a/36minutesoftype.html
+++ b/36minutesoftype.html
@@ -150,182 +150,182 @@
     <!--Grid Section Start-->
     <div class="row py-3">
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_a.png" class="img-fluid py-4"
           alt="A sketch of the letter A drawn using geometric shapes.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_b.png" class="img-fluid py-4"
           alt="A sketch of the letter B drawn using repeating curved and straight lines.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_c.png" class="img-fluid py-4"
           alt="A sketch of the letter C drawn using repeating straight lines.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_d.png" class="img-fluid py-4"
           alt="A sketch of the letter D drawn using a swirl.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_e.png" class="img-fluid py-4"
           alt="A sketch of the letter drawn E using stacked lines.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_f.png" class="img-fluid py-4"
           alt="A sketch of the letter F drawn using geometric shapes.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_g.png" class="img-fluid py-4"
           alt="A sketch of the letter G that is flat and wide.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_h.png" class="img-fluid py-4"
           alt="A sketch of the letter H with cobweb details.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_i.png" class="img-fluid py-4"
           alt="A sketch of the letter I that looks like the Eye of Sauron from Lord of the Rings.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_j.png" class="img-fluid py-4"
           alt="A sketch of the letter J drawn in cursive with a dotted line and arrows indicating how to draw it.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_k.png" class="img-fluid py-4"
           alt="A sketch of the letter K drawn with wavy lines.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_l.png" class="img-fluid py-4"
           alt="A sketch of the letter L with spiky serifs and triangle inlays.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_m.png" class="img-fluid py-4"
           alt="A sketch of the letter M that looks like an upside down W.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_n.png" class="img-fluid py-4"
           alt="A sketch of the letter N with a paint drip over it.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_o.png" class="img-fluid py-4"
           alt="A sketch of the letter O that is just an excessive scribble of a circle.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_p.png" class="img-fluid py-4"
           alt="A sketch of the letter P made out of a feather.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_q.png" class="img-fluid py-4"
           alt="A sketch of the letter Q that looks vaguely like a magnifying glass.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_r.png" class="img-fluid py-4"
           alt="A sketch of the letter R in cursive.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_s.png" class="img-fluid py-4"
           alt="A sketch of the letter S in a graffiti style.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_t.png" class="img-fluid py-4"
           alt="A sketch of the letter T made out of very shaky lines.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_u.png" class="img-fluid py-4"
           alt="A sketch of the letter U with a 3D effect.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_v.png" class="img-fluid py-4"
           alt="A sketch of the letter V that looks like a ram with square horns.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_w.png" class="img-fluid py-4"
           alt="A sketch of the letter W in cursive.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_x.png" class="img-fluid py-4"
           alt="A sketch of the letter X with on crossbar in a blackletter style and the other in a regular serif style.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_y.png" class="img-fluid py-4"
           alt="A sketch of the letter Y that looks like it's melting.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_z.png" class="img-fluid py-4"
           alt="A sketch of the letter Z in cursive.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_0.png" class="img-fluid py-4"
           alt="A sketch of the number 0 with a thick zig zag slash across the front.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_1.png" class="img-fluid py-4"
           alt="A sketch of the number 1 on a podium.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_2.png" class="img-fluid py-4"
           alt="A sketch of the number 2 that looks like rope.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_3.png" class="img-fluid py-4"
           alt="A sketch of the number 3 in bubble letter style.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_4.png" class="img-fluid py-4"
           alt="A sketch of the number 4 made out of geometric shapes.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_5.png" class="img-fluid py-4"
           alt="A sketch of the number 5 with high contrast between thick and thin strokes.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_6.png" class="img-fluid py-4"
           alt="A sketch of the number 6 that looks like a maze.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_7.png" class="img-fluid py-4"
           alt="A sketch of the number 7 with high contrast between thick and thin strokes.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_8.png" class="img-fluid py-4"
           alt="A sketch of the number 8 with Death the Kid's face in the top circle.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/36mot/36mot_9.png" class="img-fluid py-4"
           alt="A sketch of the number 9 made out of crosshatched lines.">
       </div>
@@ -465,7 +465,7 @@
           Let's build something cool together!
         </p>
 
-        <div class="pt-3 pb-5 mb-5">
+        <div class="pt-3 pb-5">
 
           <a href="mailto:srogersdesign27@gmail.com"
             class="button border my-3 px-4 py-2">Email
