--- a/calpolyracing.html
+++ b/calpolyracing.html
@@ -497,7 +497,7 @@
           Let's build something cool together!
         </p>
 
-        <div class="pt-3 pb-5 mb-5">
+        <div class="pt-3 pb-5">
 
           <a href="mailto:srogersdesign27@gmail.com"
             class="button border my-3 px-4 py-2">Email
