--- a/dew.html
+++ b/dew.html
@@ -347,6 +347,37 @@
 
 
         <!--Project Link Start-->
+        <a href="loop.html" class="col-12 col-sm-4">
+
+          <div class="overlay-container">
+
+            <img src="Images/homePage/website_2022_homePage_thumbnailsLoop.png"
+              alt="The Loop logo over an off-white background." class="overlay-image">
+
+            <div class="overlay">
+
+              <div class="overlay-text">
+
+                <p class="overlay-text-primary"> Loop </p>
+
+                <hr class="overlay-divider mx-auto my-4">
+
+                <p class="overlay-text-secondary"> Concept App </p>
+
+              </div>
+
+
+            </div>
+
+
+          </div>
+
+
+        </a>
+        <!--Project Link End-->
+
+
+        <!--Project Link Start-->
         <a href="xvela.html" class="col-12 col-sm-4">
 
           <div class="overlay-container">
@@ -363,38 +394,6 @@
                 <hr class="overlay-divider mx-auto my-4">
 
                 <p class="overlay-text-secondary"> Icon Library </p>
-
-              </div>
-
-
-            </div>
-
-
-          </div>
-
-
-        </a>
-        <!--Project Link End-->
-
-
-        <!--Project Link Start-->
-        <a href="#" class="col-12 col-sm-4">
-
-          <div class="overlay-container">
-
-            <img src="Images/homePage/website_2022_homePage_thumbnails36mot.png"
-              alt="Sketches of the letters A through I arranged in a 3 by 3 square"
-              class="overlay-image">
-
-            <div class="overlay">
-
-              <div class="overlay-text">
-
-                <p class="overlay-text-primary"> 36 Minutes of Type </p>
-
-                <hr class="overlay-divider mx-auto my-4">
-
-                <p class="overlay-text-secondary"> Coming Soon! </p>
 
               </div>
 
@@ -433,7 +432,7 @@
           Let's build something cool together!
         </p>
 
-        <div class="pt-3 pb-5 mb-5">
+        <div class="pt-3 pb-5">
 
           <a href="mailto:srogersdesign27@gmail.com"
             class="button border my-3 px-4 py-2">Email
