Animated text on grove page

--- a/grove.html
+++ b/grove.html
@@ -31,6 +31,7 @@
     rel="stylesheet">
 
   <link href="style.css" rel="stylesheet">
+  <link href="animation.css" rel="stylesheet">
 
   <title>Grove | Brand development for a mental health startup</title>
 
@@ -157,6 +158,28 @@
     <div class="border mb-5">
     </div>
     <!--Skills/Tools Section End-->
+
+    <div
+      style="background-image: url('Images/grove/website_2022_grove_animationBackground.jpg'); background-position: center; background-size: cover;">
+      <div class="row no-gutters main-row-lg text-white"
+        style="padding-top: 150px !important; padding-bottom: 150px !important;">
+        <div class="col-lg-6">
+          <h1>
+            <div class="slidingVertical mx-auto" style="font-size: 48px !important">
+              <span>Social Workers</span>
+              <span>Psychiatrists</span>
+              <span>Therapists</span>
+              <span>Psychologists</span>
+              <span>Case Managers</span>
+            </div>
+          </h1>
+        </div>
+
+        <div class="col-lg-6">
+          <h1 class="medium-center" style="font-size: 48px !important">Grow on Grove</h1>
+        </div>
+      </div>
+    </div>
 
 
     <!--2 Col Content Section Start-->
