--- a/calpolyracing.html
+++ b/calpolyracing.html
@@ -380,6 +380,37 @@
       <div class="row g-4 pb-3">
 
         <!--Project Link Start-->
+        <a href="loop.html" class="col-12 col-sm-4">
+
+          <div class="overlay-container">
+
+            <img src="Images/homePage/website_2022_homePage_thumbnailsLoop.png"
+              alt="The Loop logo over an off-white background." class="overlay-image">
+
+            <div class="overlay">
+
+              <div class="overlay-text">
+
+                <p class="overlay-text-primary"> Loop </p>
+
+                <hr class="overlay-divider mx-auto my-4">
+
+                <p class="overlay-text-secondary"> Concept App </p>
+
+              </div>
+
+
+            </div>
+
+
+          </div>
+
+
+        </a>
+        <!--Project Link End-->
+
+
+        <!--Project Link Start-->
         <a href="xvela.html" class="col-12 col-sm-4">
 
           <div class="overlay-container">
@@ -428,37 +459,6 @@
                 <hr class="overlay-divider mx-auto my-4">
 
                 <p class="overlay-text-secondary"> Lettering </p>
-
-              </div>
-
-
-            </div>
-
-
-          </div>
-
-
-        </a>
-        <!--Project Link End-->
-
-
-        <!--Project Link Start-->
-        <a href="grove.html" class="col-12 col-sm-4">
-
-          <div class="overlay-container">
-
-            <img src="Images/homePage/website_2022_homePage_thumbnailsGrove.png"
-              alt="The Grove logo over a yellow background." class="overlay-image">
-
-            <div class="overlay">
-
-              <div class="overlay-text">
-
-                <p class="overlay-text-primary"> Grove </p>
-
-                <hr class="overlay-divider mx-auto my-4">
-
-                <p class="overlay-text-secondary"> Branding </p>
 
               </div>
 
