--- a/grove.html
+++ b/grove.html
@@ -30,6 +30,9 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500"
     rel="stylesheet">
 
+  <!-- Museo and museo sans -->
+  <link rel="stylesheet" href="https://use.typekit.net/inv6xvx.css">
+
   <link href="style.css" rel="stylesheet">
   <link href="animation.css" rel="stylesheet">
 
@@ -165,7 +168,8 @@
         style="padding-top: 150px !important; padding-bottom: 150px !important;">
         <div class="col-lg-6">
           <h1>
-            <div class="slidingVertical mx-auto" style="font-size: 48px !important">
+            <div class="slidingVertical mx-auto"
+              style="font-family: museo;font-weight: 700 !important;font-size: 48px !important">
               <span>Social Workers</span>
               <span>Psychiatrists</span>
               <span>Therapists</span>
@@ -176,7 +180,9 @@
         </div>
 
         <div class="col-lg-6">
-          <h1 class="medium-center" style="font-size: 48px !important">Grow on Grove</h1>
+          <h1 class="medium-center"
+            style="font-size: 48px !important;font-family: museo-sans,sans-serif;font-weight: 300 !important">
+            Grow on Grove</h1>
         </div>
       </div>
     </div>
