--- a/loop.html
+++ b/loop.html
@@ -71,8 +71,9 @@
 
       <div class="col-12 col-sm-6 pe-5 pt-5 order-2 order-sm-1">
 
-        <p class="body-2" style="color: #3fa98a;"> Award-winning concept app that tackles
-          <br>climate change
+        <p class="body-2" style="color: #3fa98a;max-width: 407px"> Award-winning concept
+          app that tackles
+          climate change
         </p>
 
         <h1 class="header-1">Loop</h1>
@@ -168,7 +169,7 @@
       </div>
 
 
-      <div class="col-12 col-sm-6 ps-5 pe-5 pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 ps-5 pt-5 pt-sm-0">
 
         <p class="body-3">Everyday we see new think pieces outlining all the ways we need
           to change our behavior to save the planet. As a result, we start to feel
@@ -179,15 +180,22 @@
           tasks to make forming environmentally-friendly habits approachable and
           rewarding.</p>
 
-        <div class="pt-3 pb-5 mb-5">
+        <div class="pt-3">
 
           <a href="https://xd.adobe.com/view/f500c152-b354-42ca-6348-d1e9e5b4a432-8331/screen/a75fa9bb-e5a5-4b0d-84f5-b93656a1ab94/iPhone-X-XS-4/"
-            class="button border my-3 px-4 py-2" target="_blank">Try The Prototype</a>
+            class="button border my-3 px-4 py-2 d-none d-md-inline" target="_blank">
+            Try The Prototype</a>
 
         </div>
 
-
       </div>
+
+      <div class="col-12 d-flex justify-content-center d-md-none pt-5">
+        <a href="https://xd.adobe.com/view/f500c152-b354-42ca-6348-d1e9e5b4a432-8331/screen/a75fa9bb-e5a5-4b0d-84f5-b93656a1ab94/iPhone-X-XS-4/"
+          class="button border my-3 px-4 py-2" target="_blank">Try The Prototype</a>
+      </div>
+
+      <div class="pe-5"></div>
 
 
     </div>
@@ -209,7 +217,8 @@
     <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
 
       <p class="body-3">Customizing small, digestible steps based on what someone is
-        interested in leads them to feel more fulfilled by and invested in their actions.
+        interested in leads them to feel more fulfilled by and invested in their
+        actions.
         Rewarding completed tasks and tracking progress over time generates feelings of
         accomplishment and encourages continued use.</p>
 
@@ -232,7 +241,8 @@
       <div class="col-12 col-sm-6 ps-5 pe-5 pt-5 pt-sm-0">
 
         <p class="body-3">Incorporating community events connects people to the
-          environmental movement around them and lets them see the direct impact of their
+          environmental movement around them and lets them see the direct impact of
+          their
           actions.</p>
 
       </div>
@@ -310,7 +320,8 @@
 
       <div class="col-12 col-sm-6 ps-5 pe-5 pt-5 pt-sm-0">
 
-        <p class="body-3">Each task can be easily completed <br>within a day.</p>
+        <p class="body-3" style="max-width: 407px">Each task can be easily completed
+          within a day.</p>
 
       </div>
 
