Some more spacing stuff

--- a/loop.html
+++ b/loop.html
@@ -169,12 +169,14 @@
       </div>
 
 
-      <div class="col-12 col-sm-6 ps-5 pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 padded-left-text pt-5 pt-sm-0">
 
-        <p class="body-3">Everyday we see new think pieces outlining all the ways we need
+        <p class="body-3">
+          Everyday we see new think pieces outlining all the ways we need
           to change our behavior to save the planet. As a result, we start to feel
           paralyzed—we’re presented with so many things to do that we don’t know where to
-          start.</p>
+          start.
+        </p>
 
         <p class="body-3">Loop sets things in motion by using personalized, manageable
           tasks to make forming environmentally-friendly habits approachable and
@@ -214,9 +216,9 @@
 
 
     <!--Text Section Start-->
-    <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
-
-      <p class="body-3">Customizing small, digestible steps based on what someone is
+    <div class="py-3 py-sm-5 mx-auto padded-text">
+      <p class="body-3">Customizing small,
+        digestible steps based on what someone is
         interested in leads them to feel more fulfilled by and invested in their
         actions.
         Rewarding completed tasks and tracking progress over time generates feelings of
@@ -238,12 +240,12 @@
       </div>
 
 
-      <div class="col-12 col-sm-6 ps-5 pe-5 pt-5 pt-sm-0">
+      <div class="col-12 col-sm-6 padded-left-text pt-5 pt-sm-0">
 
-        <p class="body-3">Incorporating community events connects people to the
+        <p class="body-3">
+          Incorporating community events connects people to the
           environmental movement around them and lets them see the direct impact of
-          their
-          actions.</p>
+          their actions.</p>
 
       </div>
 
@@ -296,9 +298,10 @@
 
 
     <!--Text Section Start-->
-    <div class="py-3 py-sm-5 mx-auto" style="max-width: 65%;">
+    <div class="py-3 py-sm-5 mx-auto padded-text">
 
-      <p class="body-3">A colorful interface and playful illustrations keep the tone
+      <p class="body-3">
+        A colorful interface and playful illustrations keep the tone
         upbeat and optimistic, far from the doom-and-gloom that often accompanies
         conversations about climate change.</p>
 
